# pelican-typst

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml  tests.yml
examples/: 01-getting-started.typ  02-native-metadata.typ  03-text-styling-and-footnotes.typ  04-math-extras.typ  05-tables-and-terms.typ  06-numbering-and-references.typ  07-layout.typ  08-let-bindings-and-graceful-fallbacks.typ  09-known-limitations.typ  examples-README.md  fallback-test.html
pelican/plugins/typst/: __init__.py  math.py  metadata.py  reader.py  simpleyaml.py
pelican/plugins/typst/data/: lorem.txt
pelican/plugins/typst/markup/: __init__.py  bibliography.py  block_renderers.py  core.py  css_utils.py  inline_processors.py  lorem.py  numbering.py  outline_utils.py  patterns.py  text_utils.py
pelican/plugins/typst/static/: mathml-fallback.js
tests/: conftest.py  test_examples_smoke.py  test_markup_basics.py  test_markup_layout.py  test_markup_let_and_lorem.py  test_markup_refs_and_numbering.py  test_markup_strip_constructs.py  test_markup_text_and_footnotes.py  test_math.py  test_metadata.py  test_numbering.py
